# srmail

./: .gitignore  Dockerfile  README.md  config.ini  config.json  pyproject.toml  requirements.txt  run.sh
app/: run.py  srmail.py
app/conf/: config.py  schema.py
app/core/: __init__.py  database.py  emailer.py  imap.py
app/interface/: admin.py  api.py  nsqreader.py  rmqclient.py  zclient.py  zconsumer.py
app/model/: email.py
app/srmail/: __init__.py  api.py  emailer.py  imap.py  scanemail.py
srmail/: run.py
srmail/conf/: config.py
srmail/core/: database.py  emailer.py  imap.py
srmail/model/: email.py
tests/: test_srmail.py
