[tool.poetry]
name = "srmail"
version = "1.1.0"
description = "Simple RESTful Mailer"
authors = ["Yax"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
peewee = "^3.13.1"
profig = "^0.5.1"
flask_apscheduler = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
